[metadata]
name = penta
version = 0.0.1
description = Open source all-in-one CLI tool to semi-automate pentesting
author='Takuya Sawada',
author_email='sata3868.k.serpentis@gmail.com',
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url='https://github.com/takuzoo3868/penta',
keywords = "cli pentest security",

[options]
pythonrequire = >=3.6
packages = find:

[options.packages.find]
exclude = tests

[flake8]
exclude = 
    .venv, 
    # No need to traverse our git directory
    .git, 
    logs, 
    data, 
    *.pyc
filename = *.py
ignore = E203, E266, E501, W503
count = yes
show-source = yes
statistics = yes
exit-zero = yes
# GitHub editor is 127 chars wid
max-line-length = 127
max-complexity = 18
select = B,C,E,F,I,W,T4,B9
import-order-style = google
